--- a/Reports/RISE Erfahrungsbericht.tex
+++ b/Reports/RISE Erfahrungsbericht.tex
@@ -18,7 +18,7 @@
 \tableofcontents
 \section{Allgemeiner Teil}
 \subsection{Einleitung}
-Meine Berwerbung f\"{u}r das Projekt folgte einer Empfehlung eines Freundes aus meinem Wohnheim, der mich auf das Programm aufmerksam machte. Auch wenn ich noch nicht so recht wusste, was ich in den Sommerferien so vorhaben w\"{u}rde -- zum Bewerbungstermin sind diese immerhin noch mehr als ein halbes Jahr entfernt -- suchte ich mir drei Projekte heraus. Dieses spezielle in St Andrews interessierte mich besonders, weil die unterliegenden Konzepte (Elektrodynamik, Eigenbasen, Simulation) auch in meinem Studium gerade aktuell waren. So hoffte ich darauf, das Erlernte auch einmal anwenden zu k\"{o}nnen. Ich wurde nicht entt\"{a}uscht. Aber auch in anderer Hinsicht war die Zeit in Schottland sehr lohnend und ich kann das RISE-Programm w\"{a}rmstens weiterempfehlen.
+Meine Bewerbung f\"{u}r das Projekt folgte einer Empfehlung eines Freundes aus meinem Wohnheim, der mich auf das Programm aufmerksam machte. Auch wenn ich noch nicht so recht wusste, was ich in den Sommerferien so vorhaben w\"{u}rde -- zum Bewerbungstermin sind diese immerhin noch mehr als ein halbes Jahr entfernt -- suchte ich mir drei Projekte heraus. Dieses spezielle in St Andrews interessierte mich besonders, weil die unterliegenden Konzepte (Elektrodynamik, Eigenbasen, Simulation) auch in meinem Studium gerade aktuell waren. So hoffte ich darauf, das Erlernte auch einmal anwenden zu k\"{o}nnen. Ich wurde nicht entt\"{a}uscht. Aber auch in anderer Hinsicht war die Zeit in Schottland sehr lohnend und ich kann das RISE-Programm w\"{a}rmstens weiterempfehlen.
 \subsection{Vorbereitung und Organisation}
 Der wichtigste Punkt, um den man sich k{\"u}mmern sollte, sobald man die Zusage vom DAAD erhalten hat, ist die Unterkunft. Die Uni vermietet prinzipiell nur bis einschlie{\ss}lich der letzten Augustwoche, da danach die Zimmer gewartet warden und dann die regul{\"a}ren Studenten zur{\"u}ckkehren. F\"{u}ndig wird man meiner Erfahrung nach weniger \"{u}ber einschl{\"a}gige Websites, die dem deutschen \emph{WG gesucht} vergleichbar w{\"a}ren, sondern eher \"{u}ber Facebookgruppen, insbesondere \emph{Find Accommodation for Next Year}. Ausserdem kann man es \"{u}ber die \emph{Stipnetz St Andrews} Gruppe versuchen – dort war ich erfolgreich. Preislich muss man sich auf Mieten ab 400{\pounds} einstellen, wenn man in der Stadt selbst wohnen will, Preise bis 550{\pounds} sind die Regel. Billiger wird es, wenn man in Dundee oder einem der umliegenden D{\"o}rfer bleibt, dann muss man jedoch t{\"a}glich den Weg mit dem Bus auf sich nehmen.  
 \subsection{Schottland allgemein}
